Fixed bug in checkout button where it would overlap the add to cart button.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1506,10 +1506,10 @@ hr {
                     content: "";
                     background-image: image('/images/basketicon.png');
                     background-repeat: no-repeat;
-                    display: inline-block;
+                    display: block;
                     height: 16px;
                     width: 21px;
-                    margin: 0 7px 0 0;
+                    margin: 0 7px 1.5em 0;
                     position: relative;
                     top:4px;
                 }
@@ -1533,7 +1533,6 @@ hr {
                 }
             }
             &.ecom-product-go-to-checkout-btn {
-                margin-top: 1.5em;
                 text-align: center;
             }
             &:hover {
